[형식] : 로컬 데이터 파일을 추가한다

--- a/.gitignore
+++ b/.gitignore
@@ -207,5 +207,17 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# console
+# data
+/data
+
+# local data
 *.txt
+*.ipynb
+
+# test
+tests.*
+
+# console
+env.local
+secret_key.json
+service-account.json
