--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
+    "dayjs": "^1.11.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "^9.1.0",
@@ -40,6 +41,8 @@
     "lucide-react": "^0.436.0",
     "next-themes": "^0.3.0",
     "postcss": "^8",
+    "react-markdown": "^9.0.1",
+    "reading-time": "^1.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
