--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "next lint",
     "lint:fix": "eslint --fix ./src",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "feed": "ts-node -r tsconfig-paths/register --project tsconfig.node.json scripts/generateFeed.ts"
   },
   "dependencies": {
     "next": "14.2.13",
@@ -29,9 +30,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/rss": "^0.0.32",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "^9.1.0",
@@ -44,7 +47,9 @@
     "postcss": "^8",
     "react-markdown": "^9.0.1",
     "reading-time": "^1.5.0",
+    "rss": "^1.2.2",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
