--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/rss": "^0.0.32",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "eslint": "^8",
@@ -47,6 +48,7 @@
     "lucide-react": "^0.436.0",
     "next-themes": "^0.3.0",
     "postcss": "^8",
+    "react-datepicker": "^7.6.0",
     "react-markdown": "^9.0.1",
     "reading-time": "^1.5.0",
     "rss": "^1.2.2",
