[버그] : sitemap, robots 직접 생성한다

--- a/.gitignore
+++ b/.gitignore
@@ -222,5 +222,7 @@ env.local
 secret_key.json
 service-account.json
 
-# feed
+# static files
 /public/feed.xml
+/public/robots.txt
+/public/sitemap.xml
