--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -88,8 +88,12 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Generate sitemap.xml, robots.txt, feed.xml
         run: npm run static
+      - name: Clean cache before build
+        run: rm -rf .next/cache
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: Prevent Jekyll processing
+        run: touch out/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
