--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://dxwiki.github.io/",
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev",
     "prebuild": "rimraf .next",
     "build": "next build",
     "preexport": "rimraf out",
