--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:fix": "eslint --fix ./src",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
-    "static": "ts-node -r tsconfig-paths/register --project tsconfig.node.json scripts/generateFeed.ts && ts-node -r tsconfig-paths/register --project tsconfig.node.json scripts/generateSitemap.ts && ts-node -r tsconfig-paths/register --project tsconfig.node.json scripts/generateRobots.ts"
+    "static": "ts-node --project tsconfig.node.json ./scripts/generateFeed.ts && ts-node --project tsconfig.node.json ./scripts/generateSitemap.ts && ts-node --project tsconfig.node.json ./scripts/generateRobots.ts"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
