[테스트] : tsconfig.node 변경한다

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,5 +2,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   }
 }
